--- a/book.bib
+++ b/book.bib
@@ -35,3 +35,23 @@
   year={1978},
   publisher={Elsevier}
 }
+
+@incollection{akaike1998information,
+  title={Information theory and an extension of the maximum likelihood principle},
+  author={Akaike, Hirotogu},
+  booktitle={Selected Papers of Hirotugu Akaike},
+  pages={199--213},
+  year={1998},
+  publisher={Springer}
+}
+
+@article{schwarz1978estimating,
+  title={Estimating the dimension of a model},
+  author={Schwarz, Gideon and others},
+  journal={The annals of statistics},
+  volume={6},
+  number={2},
+  pages={461--464},
+  year={1978},
+  publisher={Institute of Mathematical Statistics}
+}
