--- a/docs/1.2-stat-prob-basics.md
+++ b/docs/1.2-stat-prob-basics.md
@@ -8,10 +8,10 @@ Random number generation is important for statistical simulation. R provides ran
 ```r
     # generate 10 independent Bernoulli random variables as a vector
     rbinom(n=10, size = 1, prob = 0.5)
-##  [1] 1 0 0 0 1 1 1 0 1 0
+##  [1] 0 0 1 1 1 1 1 1 0 1
     # 4 independent random standard normal variables
     rnorm(n=4)
-## [1] 1.45180010 0.02590435 0.91152393 0.26830454
+## [1]  1.2775909  0.8700949 -0.9483576 -0.5745307
 ```
 
 Setting the seed before generating random numbers will allow us to replicate the results when necessary. 
@@ -26,7 +26,7 @@ Setting the seed before generating random numbers will allow us to replicate the
 ## [1] -0.2529076  1.3672866 -0.6712572  4.1905616
 ```
 
-Some more complicated distributions require additional packages. For example, the `MASS` package can be used to generate the multivariate normal distribution. One needs to specify a covariance matrix. 
+Some more complicated distributions require additional packages. For example, the `MASS` package can be used to generate the multivariate normal distribution. One needs to specify a vector of means and an invertable covariance matrix. 
 
 ```r
     library(MASS)
@@ -41,7 +41,8 @@ Some more complicated distributions require additional packages. For example, th
 
 ## Summary Statistics and Data Visualization
 
-Statistical functions that provide a summary of the data
+Statistical functions that provide a summary of the data.
+
 
 ```r
     x = rnorm(n=100, mean = 1, sd = 2)
@@ -61,7 +62,8 @@ Statistical functions that provide a summary of the data
 ## [1] 0.05988467
 ```
 
-For discrete data, we can use the table function
+For discrete data, we can use the table function.
+
 
 ```r
     library(ElemStatLearn)
@@ -127,7 +129,7 @@ Correlations and correlation plots can be used to summarize more variables. Howe
 
 <img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-8-1.png" width="480" />
 
-3-dimensional plots are also alternative ways to visualize data. We demonstrate an example using the `plot3D` package and the `scatter3D` function. The package `rgl` can allow for an interactive plot with rotating and zooming. 
+3-dimensional plot is  also an alternative to visualize data. We demonstrate an example using the `plot3D` package and the `scatter3D` function. The observations are colored by the outcome class (`chd`). The package `rgl` can allow for an interactive plot with rotating and zooming. 
 
 
 ```r
