--- a/1.2-stat-prob-basics.Rmd
+++ b/1.2-stat-prob-basics.Rmd
@@ -20,7 +20,7 @@ Setting the seed before generating random numbers will allow us to replicate the
     rnorm(n=4, mean = 1, sd = 2)
 ```
 
-Some more complicated distributions require additional packages. For example, the `MASS` package can be used to generate the multivariate normal distribution. One needs to specify a covariance matrix. 
+Some more complicated distributions require additional packages. For example, the `MASS` package can be used to generate the multivariate normal distribution. One needs to specify a vector of means and an invertable covariance matrix. 
 ```{r, collapse=TRUE}
     library(MASS)
     P = 4
@@ -30,7 +30,8 @@ Some more complicated distributions require additional packages. For example, th
 
 ## Summary Statistics and Data Visualization
 
-Statistical functions that provide a summary of the data
+Statistical functions that provide a summary of the data.
+
 ```{r, collapse=TRUE}
     x = rnorm(n=100, mean = 1, sd = 2)
     y = rnorm(n=100, mean = 2, sd = 1)
@@ -42,7 +43,8 @@ Statistical functions that provide a summary of the data
     cor(x, y)
 ```
 
-For discrete data, we can use the table function
+For discrete data, we can use the table function.
+
 ```{r, collapse=TRUE}
     library(ElemStatLearn)
     data(SAheart)
@@ -77,7 +79,7 @@ Correlations and correlation plots can be used to summarize more variables. Howe
     chart.Correlation(SAheart[, c(1:3)], histogram=TRUE, pch="+")
 ```
 
-3-dimensional plots are also alternative ways to visualize data. We demonstrate an example using the `plot3D` package and the `scatter3D` function. The package `rgl` can allow for an interactive plot with rotating and zooming. 
+3-dimensional plot is  also an alternative to visualize data. We demonstrate an example using the `plot3D` package and the `scatter3D` function. The observations are colored by the outcome class (`chd`). The package `rgl` can allow for an interactive plot with rotating and zooming. 
 
 ```{r, collapse=TRUE, fig.width=6, fig.height=6}
     library(plot3D)
