--- a/1.3-modeling-basics.Rmd
+++ b/1.3-modeling-basics.Rmd
@@ -5,9 +5,9 @@
     data(SAheart)
 ```
 
-## Multiple Linear Regression
+## Fitting Linear Regression
 
-A simple linear regression assumes the underlying model $$Y = \beta_0 + {\boldsymbol\beta}^\text{T} X + \epsilon.$$ With observed data, we can estimate the regression coefficients. Let's use a classical dataset, the Boston Housing data [@harrison1978hedonic] from the `MASS` package. The goal of this dataset is to model the median house value (`medv`) using other predictors. 
+A simple linear regression assumes the underlying model $$Y = \beta_0 + {\boldsymbol\beta}^\text{T} X + \epsilon,$$ where $\beta_0$ is an intercept and $\boldsymbol\beta$ is a vector of coefficients corresponds to each covariate. With observed data, we can estimate the regression coefficients. Let's use a classical dataset, the Boston Housing data [@harrison1978hedonic] from the `MASS` package. The goal of this dataset is to model the median house value (`medv`) using other predictors. 
 ```{r}
     library(MASS)
     data(Boston)
@@ -16,137 +16,26 @@ A simple linear regression assumes the underlying model $$Y = \beta_0 + {\boldsy
     summary(fit)
 ```
 
-The output can be overwhelming for beginers. However, by specifying the model with `medv ~ .`, we are using all varaibles except `medv` as the predictors. And by default, an intercept term is also included. Instead, we could specify particular variables as predictors. For example
+The output can be overwhelming for beginners. Here, by specifying the model with `medv ~ .`, we are using all variables in this data as predictors, except `medv` itself. And by default, an intercept term is also included. However, we could also specify particular variables as predictors. For example, if per capita crime rate by town (`crim`), the average number of rooms (`rm`) are used to predict the price, and the weighted mean of distances to five Boston employment centres (`dis`), along with an intercept term, we specify the following
 
 ```{r}
-    fit = lm(medv ~ rm + ptratio, data = Boston)
+    fit = lm(medv ~ crim + rm + dis, data = Boston)
     summary(fit)
 ```
 
+To read the output from a linear model, we usually pay attention to several key information, such as the coefficient and the p-value for each variable, and the overall model fitting F statistic and its p-value, which is almost 0 in this case. 
 
+## Model Diagnostics 
 
+To further evaluate this model fitting, we may plot the residuals (for assessing the normality) and the Cook's distance for identifying potential influence observations. 
 
-
-
-**TODO:** Instead of specifically considering regression, change the focus of this chapter to modeling, with regression as an example.
-
-This chapter will recap the basics of performing regression analyses in `R`. For more detailed coverage, see [Applied Statistics with `R`](http://daviddalpiaz.github.io/appliedstats/).
-
-We will use the [Advertising data](data/Advertising.csv) associated with [Introduction to Statistical Learning](http://www-bcf.usc.edu/~gareth/ISL/data.html).
-
-```{r, message = FALSE, warning = FALSE}
-library(readr)
-Advertising = read_csv("data/Advertising.csv")
+```{r, fig.width=8, fig.height=8}
+    # setup the parameters for plotting 4 figures together, in a 2 by 2 structure
+    par(mfrow = c(2, 2))
+    plot(fit)
 ```
 
-After loading data into `R`, our first step should **always** be to inspect the data. We will start by simply printing some observations in order to understand the basic structure of the data.
-
-```{r}
-Advertising
-```
-
-Because the data was read using `read_csv()`, `Advertising` is a tibble. We see that there are a total of `r nrow(Advertising)` observations and `r ncol(Advertising)` variables, each of which is numeric. (Specifically double-precision vectors, but more importantly they are numbers.) For the purpose of this analysis, `Sales` will be the **response variable**. That is, we seek to understand the relationship between `Sales`, and the **predictor variables**: `TV`, `Radio`, and `Newspaper`.
-
-## Visualization for Regression
-
-After investigating the structure of the data, the next step should be to visualize the data. Since we have only numeric variables, we should consider **scatter plots**.
-
-We could do so for any individual predictor.
-
-```{r}
-plot(Sales ~ TV, data = Advertising, col = "dodgerblue", pch = 20, cex = 1.5,
-     main = "Sales vs Television Advertising")
-```
-
-The `pairs()` function is a useful way to quickly visualize a number of scatter plots.
-
-```{r}
-pairs(Advertising)
-```
-
-Often, we will be most interested in only the relationship between each predictor and the response. For this, we can use the `featurePlot()` function from the `caret` package. (We will use the `caret` package more and more frequently as we introduce new topics.)
-
-```{r, fig.height = 4, fig.width = 10, message = FALSE, warning = FALSE}
-library(caret)
-featurePlot(x = Advertising[ , c("TV", "Radio", "Newspaper")], y = Advertising$Sales)
-```
-
-We see that there is a clear increase in `Sales` as `Radio` or `TV` are increased. The relationship between `Sales` and `Newspaper` is less clear. How all of the predictors work together is also unclear, as there is some obvious correlation between `Radio` and `TV`. To investigate further, we will need to model the data.
-
-
-## The `lm()` Function {#sec:lm}
-
-The following code fits an additive **linear model** with `Sales` as the response and each remaining variable as a predictor. Note, by not using `attach()` and instead specifying the `data = ` argument, we are able to specify this model without using each of the variable names directly.
-
-```{r}
-mod_1 = lm(Sales ~ ., data = Advertising)
-# mod_1 = lm(Sales ~ TV + Radio + Newspaper, data = Advertising)
-```
-
-Note that the commented line is equivalent to the line that is run, but we will often use the `response ~ .` syntax when possible.
-
-
-## Hypothesis Testing
-
-The `summary()` function will return a large amount of useful information about a model fit using `lm()`. Much of it will be helpful for hypothesis testing including individual tests about each predictor, as well as the significance of the regression test.
-
-```{r}
-summary(mod_1)
-```
-
-```{r}
-mod_0 = lm(Sales ~ TV + Radio, data = Advertising)
-```
-
-The `anova()` function is useful for comparing two models. Here we compare the full additive model, `mod_1`, to a reduced model `mod_0`. Essentially we are testing for the significance of the `Newspaper` variable in the additive model.
-
-```{r}
-anova(mod_0, mod_1)
-```
-
-Note that hypothesis testing is *not* our focus, so we omit many details.
-
-
-## Prediction
-
-The `predict()` function is an extremely versatile function, for, prediction. When used on the result of a model fit using `lm()` it will, by default, return predictions for each of the data points used to fit the model. (Here, we limit the printed result to the first 10.)
-
-```{r}
-head(predict(mod_1), n = 10)
-```
-
-Note that the effect of the `predict()` function is dependent on the input to the function. Here, we are supplying as the first argument a model object of class `lm`. Because of this, `predict()` then runs the `predict.lm()` function. Thus, we should use `?predict.lm()` for details.
-
-We could also specify new data, which should be a data frame or tibble with the same column names as the predictors.
-
-```{r}
-new_obs = data.frame(TV = 150, Radio = 40, Newspaper = 1)
-```
-
-We can then use the `predict()` function for point estimates, confidence intervals, and prediction intervals.
-
-Using only the first two arguments, `R` will simply return a point estimate, that is, the "predicted value," $\hat{y}$.
-
-```{r}
-predict(mod_1, newdata = new_obs)
-```
-
-If we specify an additional argument `interval` with a value of `"confidence"`, `R` will return a 95% confidence interval for the mean response at the specified point. Note that here `R` also gives the point estimate as `fit`.
-
-```{r}
-predict(mod_1, newdata = new_obs, interval = "confidence")
-```
-
-Lastly, we can alter the level using the `level` argument. Here we report a prediction interval instead of a confidence interval.
-
-```{r}
-predict(mod_1, newdata = new_obs, interval = "prediction", level = 0.99)
-```
-
-
-## Unusual Observations
-
-`R` provides several functions for obtaining metrics related to unusual observations.
+R also provides several functions for obtaining metrics related to unusual observations that may help this process.
 
 - `resid()` provides the residual for each observation
 - `hatvalues()` gives the leverage of each observation
@@ -154,107 +43,97 @@ predict(mod_1, newdata = new_obs, interval = "prediction", level = 0.99)
 - `cooks.distance()` calculates the influence of each observation
 
 ```{r}
-head(resid(mod_1), n = 10)
-head(hatvalues(mod_1), n = 10)
-head(rstudent(mod_1), n = 10)
-head(cooks.distance(mod_1), n = 10)
+head(resid(fit), n = 10)
+head(hatvalues(fit), n = 10)
+head(rstudent(fit), n = 10)
+head(cooks.distance(fit), n = 10)
 ```
 
+## Variable Transformations and Interactions
 
-## Adding Complexity
+It appears that the residuals are not normally distributed because the QQ plot deviates from the diagonal line quite a lot. Sometimes variable transformations can be used to deal with this issue, but that may not fix it completely. Plotting can be useful for detecting ill-distributed variables and suggest potential transformations. For example, we may use the correlation plot to visualize them
 
-We have a number of ways to add complexity to a linear model, even allowing a linear model to be used to model non-linear relationships.
+```{r, fig.height = 6, fig.width = 6, message = FALSE, warning = FALSE}
+    library(PerformanceAnalytics)
+    chart.Correlation(Boston[, c("medv", "crim", "rm", "dis")], histogram=TRUE, pch="+")
+```
 
-### Interactions
-
-Interactions can be introduced to the `lm()` procedure in a number of ways.
-
-We can use the `:` operator to introduce a single interaction of interest.
+It looks like both `crim` and `dis` have heavy tail on the right hand side and could benefit from a log or a power transformation. variable transformations can be easily specified within the `lm()` function.
 
 ```{r}
-mod_2 = lm(Sales ~ . + TV:Newspaper, data = Advertising)
-coef(mod_2)
+    fit = lm(medv ~ log(crim) + rm + I(dis^0.5), data = Boston)
+    summary(fit)
 ```
 
-The `response ~ . ^ k` syntax can be used to model all `k`-way interactions. (As well as the appropriate lower order terms.) Here we fit a model with all two-way interactions, and the lower order main effects.
+Another approach is to consider polynomial transformations of the outcome variable, known as the Box-Cox transformation.
 
 ```{r}
-mod_3 = lm(Sales ~ . ^ 2, data = Advertising)
-coef(mod_3)
+    # explore the Box-Cox transformation
+    trans = boxcox(medv ~ log(crim) + rm + I(dis^0.5), data = Boston)
+    # obtain the best power for performing the polynomial
+    trans$x[which.max(trans$y)]
+    # refit the model
+    fit = lm(I(medv^0.2626263) ~ log(crim) + rm + I(dis^0.5), data = Boston)
 ```
 
-The `*` operator can be used to specify all interactions of a certain order, as well as all lower order terms according to the usual hierarchy. Here we see a three-way interaction and all lower order terms.
+One can again reevaluate the model fitting results and repeat the process if necessary. However, keep in mind that this is could be a tedious process that may not end with a satisfactory solution. 
+
+To further improve the model fitting we may also consider iterations and higher order terms such as 
 
 ```{r}
-mod_4 = lm(Sales ~ TV * Radio * Newspaper, data = Advertising)
-coef(mod_4)
+    fit = lm(medv ~ log(crim) + rm + rm*log(crim) + I(rm^2) + 
+             I(dis^0.5) + as.factor(chas)*rm, data = Boston)
+    summary(fit)
 ```
 
-Note that, we have only been dealing with numeric predictors. **Categorical predictors** are often recorded as **factor** variables in `R`. 
+## Model Selection
+    
+Suppose we have two candidate nested models, and we want to test if adding a set of new variables is significant in terms of predicting the outcome, this is essentially an F test. We can utilize the `anova()` function:    
 
 ```{r}
-library(tibble)
-cat_pred = tibble(
-  x1 = factor(c(rep("A", 10), rep("B", 10), rep("C", 10))),
-  x2 = runif(n = 30),
-  y  = rnorm(n = 30)
-)
-cat_pred
+    fit = lm(medv ~ crim + rm + dis, data = Boston)
+    fit2 = lm(medv ~ crim + rm + dis + chas + nox, data = Boston)
+    anova(fit, fit2)
 ```
 
-Notice that in this simple simulated tibble, we have coerced `x1` to be a factor variable, although this is not strictly necessary since the variable took values `A`, `B`, and `C`. When using `lm()`, even if not a factor, `R` would have treated `x1` as such. Coercion to factor is more important if a categorical variable is coded for example as `1`, `2` and `3`. Otherwise it is treated as numeric, which creates a difference in the regression model.
-
-The following two models illustrate the effect of factor variables on linear models.
+It appears that adding the two additional variables `chas` and `nox` is significant. Selecting variables/models is a central topic in statistics. We could consider some classical tools such as the Akaike information criterion [@akaike1998information] or the Bayesian information criterion [@schwarz1978estimating]. Incorporating the stepwise selection algorithm, we may find the best AIC model:
 
 ```{r}
-cat_pred_mod_add = lm(y ~ x1 + x2, data = cat_pred)
-coef(cat_pred_mod_add)
+    # fit a full model that contains all variables
+    full.model = lm(medv ~ ., data = Boston)
+    # select the best AIC model by stepwise regression
+    stepAIC = step(full.model, trace=0, direction="both")
+    # the best set of variables being selected
+    attr(stepAIC$terms, "term.labels")
 ```
+
+## Prediction
+
+The `predict()` function is an extremely versatile function, for, prediction. When used on the result of a model fit using `lm()` it will, by default, return predictions for each of the data points used to fit the model.
 
 ```{r}
-cat_pred_mod_int = lm(y ~ x1 * x2, data = cat_pred)
-coef(cat_pred_mod_int)
+    # the fitted value from a model fitting
+    yhat1 = fit$fitted.values
+    # predict on a set of testing data
+    yhat2 = predict(fit)
+    # they are the same
+    all(yhat1 == yhat2)
 ```
 
-
-### Polynomials
-
-Polynomial terms can be specified using the inhibit function `I()` or through the `poly()` function. Note that these two methods produce different coefficients, but the same residuals! This is due to the `poly()` function using orthogonal polynomials by default.
+We could also specify new data, which should be a data frame or tibble with the same column names as the predictors.
 
 ```{r}
-mod_5 = lm(Sales ~ TV + I(TV ^ 2), data = Advertising)
-coef(mod_5)
-mod_6 = lm(Sales ~ poly(TV, degree = 2), data = Advertising)
-coef(mod_6)
-all.equal(resid(mod_5), resid(mod_6))
+    new_obs = data.frame(crim = 0.3, rm = 6, dis = 5)
+    predict(fit, newdata = new_obs)
 ```
 
-Polynomials and interactions can be mixed to create even more complex models.
+We can also obtain the confidence interval for the mean response value of this new observation
+```{r}
+    predict(fit, newdata = new_obs, interval = "confidence")
+```
+
+Lastly, we can alter the level using the `level` argument. Here we report a prediction interval instead of a confidence interval.
 
 ```{r}
-mod_7 = lm(Sales ~ . ^ 2 + poly(TV, degree = 3), data = Advertising)
-# mod_7 = lm(Sales ~ . ^ 2 + I(TV ^ 2) + I(TV ^ 3), data = Advertising)
-coef(mod_7)
-```
-
-Notice here that `R` ignores the first order term from `poly(TV, degree = 3)` as it is already in the model. We could consider using the commented line instead.
-
-
-### Transformations
-
-Note that we could also create more complex models, which allow for non-linearity, using transformations. Be aware, when doing so to the response variable, that this will affect the units of said variable. You may need to un-transform to compare to non-transformed models.
-
-```{r}
-mod_8 = lm(log(Sales) ~ ., data = Advertising)
-sqrt(mean(resid(mod_8) ^ 2)) # incorrect RMSE for Model 8
-sqrt(mean(resid(mod_7) ^ 2)) # RMSE for Model 7
-sqrt(mean(exp(resid(mod_8)) ^ 2)) # correct RMSE for Model 8
-```
-
-## `rmarkdown`
-
-The `rmarkdown` file for this chapter can be found [**here**](04-model-basics.Rmd). The file was created using `R` version `r paste0(version$major, "." ,version$minor)`. The following packages (and their dependencies) were loaded in this file:
-
-```{r, echo = FALSE}
-names(sessionInfo()$otherPkgs)
+    predict(fit, newdata = new_obs, interval = "prediction", level = 0.99)
 ```
