--- a/docs/2.1-kmeans.md
+++ b/docs/2.1-kmeans.md
@@ -41,7 +41,7 @@ When there is nothing to move anymore, the algorithm stops. Keep in mind that we
 ```
 
 ```
-## [1] 899.3916
+## [1] 885.8913
 ```
 
 ```r
@@ -110,9 +110,9 @@ Let's perfrom the $k$-means clustering
 
 ```
 ##   Petal.Length Petal.Width
-## 1     5.595833    2.037500
-## 2     4.269231    1.342308
-## 3     1.462000    0.246000
+## 1     1.462000    0.246000
+## 2     5.595833    2.037500
+## 3     4.269231    1.342308
 ```
 
 ```r
@@ -121,7 +121,7 @@ Let's perfrom the $k$-means clustering
 ```
 
 ```
-## [1] 16.29167 13.05769  2.02200
+## [1]  2.02200 16.29167 13.05769
 ```
 
 ```r
@@ -228,5 +228,10 @@ The next step is to perform the $k$-mean and obtain the cluster label. For examp
 With this technique, we can easily reproduce results with different $k$ values. Apparently, as $k$ increases, we get better resolution. $k = 30$ seems to recover the original image fairly well. 
 
 
+
+
+```
+## Warning: did not converge in 10 iterations
+```
 
 <img src="2.1-kmeans_files/figure-html/unnamed-chunk-13-1.png" width="960" />
