--- a/3.2-ridge.Rmd
+++ b/3.2-ridge.Rmd
@@ -1,8 +1,3 @@
----
-title: Ridge Regression
-author: Ruoqing Zhu
-abstract: This is the supplementary `R` file for ridge regression in the lecture note "Penalized".
----
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -10,6 +5,8 @@ knitr::opts_chunk$set(message = FALSE)
 knitr::opts_chunk$set(fig.align='center')
 options(width = 1000)
 ```
+
+# Ridge Regression
 
 \newcommand{\bbeta}[0]{{\boldsymbol\beta}}
 \newcommand{\bX}[0]{\mathbf X}
