--- a/docs/3.1-linear.md
+++ b/docs/3.1-linear.md
@@ -1,10 +1,8 @@
----
-title: Linear Regression and Model Selection
-author: Ruoqing Zhu
-abstract: This is the supplementary `R` file for linear regression in the lecture note "LinearReg".
----
+# (PART) Linear and Penalized Linear Regressions {-}
 
 
+
+# Linear Regression and Model Selection
 
 ## Basic Concepts
 
@@ -92,7 +90,7 @@ When the number of variables is large, inverting $\mathbf{X}^\text{T} \mathbf{X}
 
 ```
 ##    user  system elapsed 
-##    0.22    0.00    0.22
+##    0.31    0.00    0.32
 ```
 
 ```r
@@ -116,7 +114,7 @@ When the number of variables is large, inverting $\mathbf{X}^\text{T} \mathbf{X}
 
 ```
 ##    user  system elapsed 
-##    0.09    0.00    0.09
+##    0.14    0.00    0.14
 ```
 
 ```r
@@ -130,7 +128,7 @@ When the number of variables is large, inverting $\mathbf{X}^\text{T} \mathbf{X}
 
 ```
 ##    user  system elapsed 
-##    0.14    0.00    0.14
+##    0.12    0.00    0.13
 ```
 
 ```r
@@ -140,7 +138,7 @@ When the number of variables is large, inverting $\mathbf{X}^\text{T} \mathbf{X}
 
 ```
 ##    user  system elapsed 
-##    0.14    0.00    0.14
+##    0.16    0.00    0.16
 ```
 
 ```r
@@ -168,7 +166,7 @@ When the number of variables is large, inverting $\mathbf{X}^\text{T} \mathbf{X}
 
 ```
 ##    user  system elapsed 
-##    0.13    0.00    0.13
+##    0.13    0.00    0.12
 ```
 
 ```r
