--- a/index.Rmd
+++ b/index.Rmd
@@ -2,8 +2,8 @@
 title: "Statistical Learning with R"
 author: "[Ruoqing Zhu](https://sites.google.com/site/teazrq/)"
 date: "`r Sys.Date()`"
-github-repo: teazrq/SLRL
-url: 'http\://teazrq.github.io/SLRL/'
+github-repo: teazrq/SLWR
+url: 'http\://teazrq.github.io/SLWR/'
 knit: "bookdown::render_book"
 site: bookdown::bookdown_site
 documentclass: book
@@ -21,11 +21,11 @@ knitr::opts_chunk$set(fig.align = "center")
 
 # Preface {-}
 
-Welcome to Statistical Learning with R! I started this project during the summer of 2018 when I was preparing for the Stat 432 course. This course was taught by our former faculty member [Dr. David Dalpiaz](https://daviddalpiaz.com/teaching.html), who is currently at The Ohio State University. David introduced to me this awesome way of publishing website on GitHub, which is a very efficient approach for developing courses. Since I was also teaching Stat 542 (Statistical Learning) during the previous two years, I figured it could be beneficial to integrate what I have to this [existing book](https://daviddalpiaz.github.io/r4sl/) by David and use it as the R material for both courses. As you can tell, I am not being very creative on the name, so `SLWR' it is. You can find the source file of this book on my [GitHub](https://teazrq.github.io/SLRL/).
+Welcome to Statistical Learning with R! I started this project during the summer of 2018 when I was preparing for the Stat 432 course. At that time, our faculty member [Dr. David Dalpiaz](https://daviddalpiaz.com/teaching.html), had decided to move to The Ohio State University (although he later on moved back to UIUC). David introduced to me this awesome way of publishing website on GitHub, which is a very efficient approach for developing courses. Since I was also teaching Stat 542 (Statistical Learning) for several years, I figured it could be beneficial to integrate what I have to this [existing book](https://daviddalpiaz.github.io/r4sl/) by David and use it as the R material for both courses. As you can tell, I am not being very creative on the name, so `SLWR' it is. You can find the source file of this book on my [GitHub](https://teazrq.github.io/SLRL/).
 
 ## Target Audience {-}
 
-This book is targeted at advanced undergraduate to MS students in Statistics who have some or no prior statistical learning experience. Previous experience with both basic mathematics (mainly linear algebra), statistical modeling (such as linear regressions) and R are assumed.
+This book is targeted at advanced undergraduate to first/second year Ph.D students in Statistics who have prior knowledge in statistics. Previous experience with both basic mathematics (mainly linear algebra), statistical modeling (such as linear regressions) and R are assumed.
 
 ## What's Covered? {-}
 
