--- a/1.1-r-intro.Rmd
+++ b/1.1-r-intro.Rmd
@@ -10,6 +10,8 @@ output:
 options(width = 1000)
 ```
 
+aaaasdfasdf
+
 # R, RStudio and R Markdown
 
 R is a free-to-use software that is very popular in statistical computing. You can download R from its [official website](https://www.r-project.org/). Another software that makes using R easier is RStudio, which is available at [here](https://www.rstudio.com/). You can find many online guides that help you to set-up these two software, for example, this [\color{blue} YouTube video](https://www.youtube.com/watch?v=cX532N_XLIs&t=19s/). R Markdown is a built-in feature of RStudio. It works like an integration of LaTex and programming playground that compiles source code into nice-looking HTML, PDF, or MS Word files. This book is created using an extension of R Markdown, developed by [Yihui Xie](https://bookdown.org/yihui/bookdown/). 
