--- a/1.6-r-basics.Rmd
+++ b/1.6-r-basics.Rmd
@@ -4,6 +4,8 @@ output:
   pdf_document: default
 ---
 
+# R Basics
+
 ## Resources and Guides
 
 There are many online resources for how to use R, RStudio, and R Markdown. For example, David Dalpiaz's other online book [Applied Statistics with R](http://daviddalpiaz.github.io/appliedstats/) contains an introduction to using them. There are also other online documentation such as 
