--- a/docs/3.1-linear.md
+++ b/docs/3.1-linear.md
@@ -44,7 +44,7 @@ This can be viewed as either a covex optimization problem or projections on the 
 ## [1] 1.088813 0.679870
 ```
 
-### Linear regression as projections
+### Linear regression as projections {#linear-reg}
 
 Another view is through projections in vector space. Consider each column of $\mathbf{X}$ as a vector, and project $\mathbf{y}$ onto the column space of $\mathbf{X}$. The project is 
 
@@ -128,7 +128,7 @@ When the number of variables is large, inverting $\mathbf{X}^\text{T} \mathbf{X}
 
 ```
 ##    user  system elapsed 
-##    0.13    0.02    0.14
+##    0.12    0.02    0.14
 ```
 
 ```r
@@ -138,7 +138,7 @@ When the number of variables is large, inverting $\mathbf{X}^\text{T} \mathbf{X}
 
 ```
 ##    user  system elapsed 
-##    0.18    0.00    0.17
+##    0.16    0.01    0.18
 ```
 
 ```r
@@ -166,7 +166,7 @@ When the number of variables is large, inverting $\mathbf{X}^\text{T} \mathbf{X}
 
 ```
 ##    user  system elapsed 
-##    0.13    0.00    0.13
+##    0.12    0.00    0.12
 ```
 
 ```r
