--- a/docs/1.1-r-basics.md
+++ b/docs/1.1-r-basics.md
@@ -1,66 +1,83 @@
----
-output:
-  html_document: default
-  pdf_document: default
----
-
 # (PART) Basics Knowledge {-}
 
 
 
-# R, RStudio and R Markdown
+# R and RStudio
 
-R is a free-to-use software that is very popular in statistical computing. You can download R from its [official website](https://www.r-project.org/). Another software that makes using R easier is RStudio, which is available at [here](https://www.rstudio.com/). You can find many online guides that help you to set-up these two software, for example, this [\color{blue} YouTube video](https://www.youtube.com/watch?v=cX532N_XLIs&t=19s/). R Markdown is a built-in feature of RStudio. It works like an integration of LaTex and programming playground that compiles source code into nice-looking HTML, PDF, or MS Word files. This book is created using an extension of R Markdown, developed by [Yihui Xie](https://bookdown.org/yihui/bookdown/). 
+The first step is to download and install [R](https://www.r-project.org/) and [RStudio](https://www.rstudio.com/products/rstudio/download/#download). Most steps should be self-explanatory. You can also find many online guides for step-by-step instruction, such as [this YouTube video](https://www.youtube.com/watch?v=cX532N_XLIs&t=19s/). However, be aware that some details may have been changed over the years. 
 
-## Resources and Guides
+After installing both, open your RStudio, you should see four panes: 
 
-There are many online resources for how to use R, RStudio, and R Markdown. For example, David Dalpiaz's other online book [Applied Statistics with R](http://daviddalpiaz.github.io/appliedstats/) contains an introduction to using them. There are also other online documentation such as 
+  * Source pane on top-left where you write code in to files
+  * Console on bottom-left where the code is inputted into R
+  * Environment (and other tabs) on top-right where you can see current variables and objects you defined
+  * File (and other tabs) on bottom-right which is essentially a file borrower
+
+We will mainly use the left two panes. You can either directly input code into the console to run for results, or edit your code in a file and run them in chunks or as a whole. 
+
+## Resources and Guides  {#r-basic}
+
+There are many online resources for how to use R, RStudio. For example, David Dalpiaz's other online book [Applied Statistics with R](http://daviddalpiaz.github.io/appliedstats/) contains an introduction to using them. There are also other online documentation such as 
 
 * [Install R and RStudio](https://www.youtube.com/watch?v=cX532N_XLIs&t=19s/)
 * [R tutorial](http://www.r-tutor.com/r-introduction)
 * [Data in R Play-list (video)](https://www.youtube.com/playlist?list=PLBgxzZMu3GpPojVSoriMTWQCUno_3hjNi)
 * [R and RStudio Play-list (video)](https://www.youtube.com/playlist?list=PLBgxzZMu3GpMjYhX7jLm5B9gEV7AOOJ5w)
-* [R Markdown Cheat Sheet](https://www.rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf)
-* [R Markdown Play-list (video)](https://www.youtube.com/playlist?list=PLBgxzZMu3GpNgd07DwmS-2odHtMO6MWGH)
 
-It is worth to mention that once you become a developer of R packages using `C/C++` (add-on of R for performing specific tasks), and you also happen to use Windows like I do, you have to install this [Rtools](https://cran.r-project.org/bin/windows/Rtools/) that contains compilers. This is also needed if you want to manually install any R package using a "source" (`.tar.gz` files) instead of using the so-called "binaries" (`.zip` files). 
+It is worth to mention that once you become an advanced user, and possibly a developer of R packages using `C/C++` (add-on of R for performing specific tasks), and you also happen to use Windows like I do, you will have to install [Rtools](https://cran.r-project.org/bin/windows/Rtools/) that contains the gcc compilers. This is also needed if you want to install any R package from a "source" (`.tar.gz`) file instead of using the so-called "binaries" (`.zip` files). 
 
 ## Basic Mathematical Operations
 
-We will briefly cover some basic R calculations and operations. If you want to see more information about a particular function or operator in R, the easiest way is to get the reference document. Put a question mark in front of a function name:
-
-
-```r
-    # In a default R console window, this will open up a web browser.
-    # In RStudio, this will be displayed at the ‘Help’ window at the bottom-right penal. 
-    ?log2
-    ?matrix
-```
-
-Try type-in the following commands into your R console and start to explore yourself. Most of them are self-explanatory. Lines with a `#` in the front are comments, which will not be executed. Lines with `##` in the front are outputs. 
+Basic R calculations and operations should be self-explanatory. Try to type-in the following commands into your R console and start to explore yourself. Lines with a `#` in the front are comments, which will not be executed. Lines with `##` in the front are outputs you should expect. 
 
 
 ```r
     # Basic mathematical operations
     1 + 3
 ## [1] 4
-    3*5
-## [1] 15
+    1 - 3
+## [1] -2
+    1 * 3
+## [1] 3
+    1 / 3
+## [1] 0.3333333
     3^5
 ## [1] 243
-    exp(2)
-## [1] 7.389056
+    4^(-1/2)
+## [1] 0.5
+    pi
+## [1] 3.141593
+    
+    # some math functions
+    sqrt(4)
+## [1] 2
+    exp(1)
+## [1] 2.718282
     log(3)
 ## [1] 1.098612
-    log2(3)
-## [1] 1.584963
+    log2(16)
+## [1] 4
+    log(15, base = 3)
+## [1] 2.464974
     factorial(5)
 ## [1] 120
+    sin(pi)
+## [1] 1.224606e-16
+```
+
+If you want to see more information about a particular function or operator in R, the easiest way is to get the reference document. Put a question mark in front of a function name:
+
+
+```r
+    # In a default R console window, this will open up a web browser.
+    # In RStudio, this will be displayed at the ‘Help’ window at the bottom-right penal (Help tab). 
+    ?log10
+    ?cos
 ```
 
 ## Data Objects
 
-Data objects can be a complicated topic for people who never used R before. Most common data objects are `vector`, `matrix`, `list`, and `data.frame`. Operations on vectors are matrices are fairly intuitive.
+Data objects can be a complicated topic for people who never used R before. The most common data objects are `vector`, `matrix`, `list`, and `data.frame`. They are defined using a specific syntax. To define a vector, we use `c` followed by `()`, where the elements within the parenthesis are separated using comma. You can save the vector and name as something else. For example
 
 
 ```r
@@ -69,13 +86,38 @@ Data objects can be a complicated topic for people who never used R before. Most
 ## [1] 1 2 3 4
     c("a", "b", "c")
 ## [1] "a" "b" "c"
-    # creating matrix from a vector
+    
+    # define a new vector object, called `x`
+    x = c(1,1,1,0,0,0)
+```
+
+After defining this object `x`, it should also appear on your top-right environment pane. To access elements in an object, we use the `[]` operator, like a `C` programming reference style.
+
+
+```r
+    # getting the second element in x
+    x[2]
+## [1] 1
+
+    # getting the second to the fourth element in x
+    x[2:4]
+## [1] 1 1 0
+```
+
+Similarly, we can create and access matrices.
+
+
+```r
+    # create a matrix by providing all of its elements
+    # the elements are filled to the matrix by column
     matrix(c(1,2,3,4), 2, 2)
 ##      [,1] [,2]
 ## [1,]    1    3
 ## [2,]    2    4
-    x = c(1,1,1,0,0,0); y = c(1,0,1,0,1,0)
-    cbind(x,y)
+
+    # create a matrix by column-bind vectors
+    y = c(1,0,1,0,1,0)
+    cbind(x, y)
 ##      x y
 ## [1,] 1 1
 ## [2,] 1 0
@@ -83,63 +125,100 @@ Data objects can be a complicated topic for people who never used R before. Most
 ## [4,] 0 0
 ## [5,] 0 1
 ## [6,] 0 0
-    # matrix multiplication using '%*%'
-    matrix(c(1,2,3,4), 2, 2) %*% t(cbind(x,y))
-##      [,1] [,2] [,3] [,4] [,5] [,6]
-## [1,]    4    1    4    0    3    0
-## [2,]    6    2    6    0    4    0
+
+    # access elements in a matrix
+    # Note that in R, upper and lower cases are treated as two different objects
+    X = matrix(c(1:16), 4, 4)
+    X
+##      [,1] [,2] [,3] [,4]
+## [1,]    1    5    9   13
+## [2,]    2    6   10   14
+## [3,]    3    7   11   15
+## [4,]    4    8   12   16
+    X[2, 3]
+## [1] 10
+    X[1, ]
+## [1]  1  5  9 13
+    
+    # getting a sub-matrix of X
+    X[1:2, 3:4]
+##      [,1] [,2]
+## [1,]    9   13
+## [2,]   10   14
 ```
 
-Simple mathematical operations on vectors and matrices are usually element-wise. You can easily extract certain elements of them by using the `[]` operator, like a `C` programming reference style. 
+Simple mathematical operations on vectors and matrices are usually element-wise. For matrix multiplications, you should use `%*%`.
 
 
 ```r
-    # some simple operations 
-    x[3]
-## [1] 1
-    x[2:5]
-## [1] 1 1 0 0
-    cbind(x,y)[1:2, ]
-##      x y
-## [1,] 1 1
-## [2,] 1 0
+    # adding two vectors
     (x + y)^2
 ## [1] 4 1 4 0 1 0
+
+    # getting the length of a vector
     length(x)
 ## [1] 6
-    dim(cbind(x,y))
-## [1] 6 2
-    # A warning will be issued when R detects something wrong. Results may still be produced.
-    x + c(1,2,3,4)
-## Warning in x + c(1, 2, 3, 4): longer object length is not a multiple of shorter object length
-## [1] 2 3 4 4 1 2
+    
+    # matrix multiplication
+    X %*% X
+##      [,1] [,2] [,3] [,4]
+## [1,]   90  202  314  426
+## [2,]  100  228  356  484
+## [3,]  110  254  398  542
+## [4,]  120  280  440  600
+    
+    # getting the dimension of a matrix
+    dim(X)
+## [1] 4 4
+    
+    # A warning will be issued when R detects something wrong
+    # Results may still be produced however
+    y + c(1,2,3,4)
+## Warning in y + c(1, 2, 3, 4): longer object length is not a multiple of shorter object length
+## [1] 2 2 4 4 2 2
 ```
 
-`list()` simply creates a list of objects (of any type). However, some operators cannot be directly applied to a list in a similar way as to vectors or matrices. Model fitting results in R are usually stored as a list (for example, the `lm()` function used in Section \@ref(sec:lm).
+`list()` creates a list of objects (of any type). However, some operators cannot be directly applied to a list in a similar way as to vectors or matrices. Model fitting results in R are usually stored as a list (for example, the `lm()` function used in Chapter \@ref(linear-reg).
 
 
 ```r
     # creating a list
     x = list(c(1,2), "hello", matrix(c(1,2,3,4), 2, 2))
+
+    # accessing its elements using double brackets `[[]]` 
     x[[1]]
 ## [1] 1 2
 ```
 
-`data.frame()` creates a list of vectors of equal length, and display them as a matrix-like object where each vector is a column of the matrix. It is mainly used for storing data. For example the famous iris data. The first four columns are numerical variables, while the last column is a categorical variable with three levels: `setosa`, `versicolor`, and `virginica`.
+`data.frame()` creates a list of vectors of equal length, and display them as a matrix-like object where each vector is a column of the matrix. It is mainly used for storing data. This will be our most frequently used data object. For example, in the famous `iris` data, the first four columns are numerical variables, while the last column is a categorical variable with three levels: `setosa`, `versicolor`, and `virginica`:
 
 
 ```r
+    # The iris data is included with base R, so we can use them directly
+    # This will create a copy of the data into your environment
+    data(iris)
+
     # the head function peeks the first several rows of the dataset 
     head(iris, n = 3)
 ##   Sepal.Length Sepal.Width Petal.Length Petal.Width Species
 ## 1          5.1         3.5          1.4         0.2  setosa
 ## 2          4.9         3.0          1.4         0.2  setosa
 ## 3          4.7         3.2          1.3         0.2  setosa
-    # data frame can be called by each individual column
-    iris$Species[c(1, 51, 101)]
-## [1] setosa     versicolor virginica 
+    
+    # each column usually contains a column (variable) name 
+    colnames(iris)
+## [1] "Sepal.Length" "Sepal.Width"  "Petal.Length" "Petal.Width"  "Species"
+    
+    # data frame can be called by each individual column, which will be a vector
+    iris$Species
+##   [1] setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     setosa     versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor
+##  [91] versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor versicolor virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica  virginica 
 ## Levels: setosa versicolor virginica
-    # the summary function can be used to view all variables
+    iris$Species[2:4]
+## [1] setosa setosa setosa
+## Levels: setosa versicolor virginica
+    
+    # the summary function can be used to view summary statistics of all variables
     summary(iris)
 ##   Sepal.Length    Sepal.Width     Petal.Length    Petal.Width          Species  
 ##  Min.   :4.300   Min.   :2.000   Min.   :1.000   Min.   :0.100   setosa    :50  
